Corregida la grilla de imágenes del ejercicio 6, sin overflow, se destacan correctamente

--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,9 @@ body {
 
 .img-container {
   overflow: hidden;
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
 }
 
 .lista-cerros:hover {
